--- a/.github/workflows/ipq60xx-wifi.yml
+++ b/.github/workflows/ipq60xx-wifi.yml
@@ -10,6 +10,7 @@ env:
   REPO_BRANCH: main
   CONFIG_FILE: configs/ipq60xx-wifi.config
   DIY_SCRIPT: diy-script.sh
+  PATCH_DIR: patchs/0001-show-soc-status-on-luci.patch
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
@@ -94,6 +95,14 @@ jobs:
         cd $OPENWRT_PATH
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+       
+    - name: Install Patches
+      run: |
+        git config --global user.name "OpenWrt Builder"
+        git config --global user.email "buster-openwrt@ovvo.uk"
+        cp $PATCH_DIR $OPENWRT_PATH/feeds/luci
+        cd $OPENWRT_PATH/feeds/luci
+        git am 0001-show-soc-status-on-luci.patch
 
     - name: Load Custom Configuration
       run: |
