--- a/.github/workflows/ipq60xx-wifi.yml
+++ b/.github/workflows/ipq60xx-wifi.yml
@@ -10,7 +10,6 @@ env:
   REPO_BRANCH: main
   CONFIG_FILE: configs/ipq60xx-wifi.config
   DIY_SCRIPT: diy-script.sh
-  PATCH_DIR: patchs/0001-show-soc-status-on-luci.patch
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
@@ -114,7 +113,7 @@ jobs:
       run: |
         cd $OPENWRT_PATH
         echo -e "$(nproc) thread compile"
-        make -j1 V=s
+        make -j$(nproc) || make -j1 || make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
