--- a/.github/workflows/4.4.6-3wifi.yml
+++ b/.github/workflows/4.4.6-3wifi.yml
@@ -8,7 +8,7 @@ on:
 env:
   REPO_URL: https://github.com/1261685372/ax18usb.git
   REPO_BRANCH: main
-  CONFIG_FILE: configs/ZN-M2wifi-china.config
+  CONFIG_FILE: configs/ax18usb.config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
@@ -72,6 +72,7 @@ jobs:
     - name: Generate Variables
       run: |
         cd $OPENWRT_PATH
+        
         cp default.config .config
         make defconfig > /dev/null 2>&1
         SOURCE_REPO="$(echo $REPO_URL | awk -F '/' '{print $(NF)}')"
