--- a/.github/workflows/4.4.6-3wifi.yml
+++ b/.github/workflows/4.4.6-3wifi.yml
@@ -74,10 +74,10 @@ jobs:
         cp $CONFIG_FILE $OPENWRT_PATH/.config
         cd $OPENWRT_PATH
         make defconfig > /dev/null 2>&1
-        SOURCE_REPO="$(echo $REPO_URL | awk -F '/' '{print $(NF)}')"
-        echo "SOURCE_REPO=$SOURCE_REPO" >> $GITHUB_ENV
-        DEVICE_TARGET=$(cat .config | grep CONFIG_TARGET_BOARD | awk -F '"' '{print $2}')
-        echo "DEVICE_TARGET=$DEVICE_TARGET" >> $GITHUB_ENV
+        # SOURCE_REPO="$(echo $REPO_URL | awk -F '/' '{print $(NF)}')"
+        # echo "SOURCE_REPO=$SOURCE_REPO" >> $GITHUB_ENV
+        # DEVICE_TARGET=$(cat .config | grep CONFIG_TARGET_BOARD | awk -F '"' '{print $2}')
+        # echo "DEVICE_TARGET=$DEVICE_TARGET" >> $GITHUB_ENV
         # DEVICE_SUBTARGET=$(cat .config | grep CONFIG_TARGET_SUBTARGET | awk -F '"' '{print $2}')
         # echo "DEVICE_SUBTARGET=$DEVICE_SUBTARGET" >> $GITHUB_ENV
 
