--- a/.github/workflows/4.4.6-3wifi.yml
+++ b/.github/workflows/4.4.6-3wifi.yml
@@ -103,10 +103,10 @@ jobs:
     #     wget https://raw.githubusercontent.com/openwrt-ipq60xx/patches/main/feeds/luci/0001-show-soc-status-on-luci.patch
     #     git am 0001-show-soc-status-on-luci.patch
   
-    # - name: Load Custom Configuration
-    #   run: |
-    #     [ -e files ] && mv files $OPENWRT_PATH/files
-    #     [ -e $CONFIG_FILE ] && mv $CONFIG_FILE $OPENWRT_PATH/.config
+    - name: Load Custom Configuration
+      run: |
+        [ -e files ] && mv files $OPENWRT_PATH/files
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE $OPENWRT_PATH/.config
 
     - name: Download DL Package
       run: |
@@ -124,7 +124,6 @@ jobs:
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "ReleaseDATE=$(date +"%Y年%m月%d日%H时%M分%S秒")" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
 
     - name: Check Space Usage
@@ -161,8 +160,8 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         name: R${{ env.DATE }} for ${{ env.FIRMWARE_TAG }}
-        allowUpdates: true
-        tag: ${{ env.FIRMWARE_TAG }}-${{ env.ReleaseDATE }}
+        allowUpdates: false
+        tag: ${{ env.FIRMWARE_TAG }}
         token: ${{ secrets.GITHUB_TOKEN }}
         artifacts: ${{ env.FIRMWARE_PATH }}/*
         body: |
