--- a/.github/workflows/IPQ60XX-WIFI.yml
+++ b/.github/workflows/IPQ60XX-WIFI.yml
@@ -6,8 +6,8 @@ on:
     - cron: 0 19 * * *
 
 env:
-  REPO_URL: https://github.com/breeze303/openwrt-6.x.git
-  REPO_BRANCH: main
+  REPO_URL: https://github.com/littletao2008/openwrt-6.x.git
+  REPO_BRANCH: wifi-nss
   CONFIG_FILE: configs/ipq60xx-wifi.config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
