--- a/.github/workflows/IPQ60XX-WIFI.yml
+++ b/.github/workflows/IPQ60XX-WIFI.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REPO_URL: https://github.com/littletao2008/openwrt-6.x.git
-  REPO_BRANCH: wifi-nss
+  REPO_BRANCH: main
   CONFIG_FILE: configs/ipq60xx-wifi.config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
