--- a/.github/workflows/IPQ60XX-WIFI.yml
+++ b/.github/workflows/IPQ60XX-WIFI.yml
@@ -6,7 +6,7 @@ on:
     - cron: 0 19 * * *
 
 env:
-  REPO_URL: https://github.com/littletao2008/openwrt-6.x.git
+  REPO_URL: https://github.com/350048663/openwrt-6.x.git
   REPO_BRANCH: main
   CONFIG_FILE: configs/ipq60xx-wifi.config
   DIY_SCRIPT: diy-script.sh
